src/test/deca/syntax/valid/SyntaxObject/test_classes.deca
// Description:
//  test de features variées: classe fille, usage de méthode dans une méthode, attribut du type de sa propre classe
//  , polymorphisme, réécriture et redéfinitions ect...          
//
// Resultats:
//  
// 
// Historique:
//    cree le 15/01/2023


class A3{
    private int x;
    public A3(int i){
        this.x=i;
    }
    public int getX(){
        return this.x;
    }
    public void setX(int i){
        this.x=i;
    }
    public int setgetX(int i){
        this.setX(i);
        return this.getX();
    }
    public void QuiSuisJe(){
        println("Je suis un attribut de la classe A3");
    }
}
class B3 extends A3{
    private float z;
    pulic B3 successeur;
    public B3(int i, float f){
        this.x=i;
        this.z=f;
    }
    public void QuiSuisJe(){
        println("Je suis un attribut de la classe B3");
    }
    public void QuiSuisJe(String nom){
        QuiSuisJe();
        println("je suis ",nom);
        }
    public float getZ(){
        return this.z;
    }
    public void setZ(return z){
        this.x=i;
    }
}

{
    A3 a=new A3(4);
    float z1;
    B3 b;
    int y=a.x;
    B3 b2=new(5, 5.5);
    a.getX();
    a.setX(2);
    a.setgetX(18);
    a.QuiSuisJe();
    b.QuiSuisJe();
    b.QuiSuisJe("b");
    b2.successeur=null;
    b.successeur=b2;
    z1=b.successeur.z;
    //if(a.instanceOf(A3)){
        //println("instanceOf reconnait l'appartenance");
    //}
    //else{
        //println("instanceOf ne reconnait pas l'appartenance");
    //}
    //if(b.instanceOf(A3)){
        //println("instanceOf reconnait la non appartenance");
    //}
    //else{
        //println("instanceOf ne reconnait pas la non appartenance");
    //}
    b2=(B3)b;
    y=b2.x;
}

